--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,20 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
-* This file contains the CSS for index.html
+/* Created by: Kukwac
+* Created on: Mar 2022
+* This CSS file defines the style for index.html
+* ICD2O-Unit3-01-HTML-AreaTrapezoid
 */
+
+body {
+    background-color: rgb(255, 255, 255);
+}
+
+h1 {
+    background-color: rgb(224, 2, 253);
+    color: hsl(78, 100%, 50%);
+    padding: 40px;
+    text-align: center;
+}
+
+p {
+    background-color: #00f7ff;
+}
